--- a/index.html
+++ b/index.html
@@ -34,13 +34,28 @@
                 </div>
             </div>
         </section>
+        <section id="flight check" class="content-section active">
+            <h2>✈️ 航班資訊 待確認細節</h2>
+            <div class="card">
+                <h3>星宇航空 STARLUX</h3>
+                <div class="flight-detail">
+                    <p><strong>報到日為前 48 小時 </p>
+                    <p><strong>要記得選位置 訂餐 </p>
+                    <p><strong>去回叫車都還沒訂欸 </p>
+                </div>
+                </div>
+        </section>
+
 
         <section id="itinerary" class="content-section">
             <h2>🗺️ 五天四夜行程概覽</h2>
             <div class="timeline">
                 <div class="day-card">
                     <span class="day-tag">4/28 (二)</span>
-                    <p>抵達 → 🏨 Rei Check-in → 川端商店街 → 櫛田神社 → MaxValu 超市 (24H)</p>
+                    <hr>
+                    <p>13:05 抵達 預計出關14:00 </p>
+                    <p>15:00 抵達🏨 Rei hotel Check-in</p>
+                    <p>16:00 出發川端商店街→ 櫛田神社 → MaxValu 超市 (24H)</p>
                     <small>💡 建議搭計程車 (1500~2000 JPY)，舒服開局！</small>
                 </div>
                 <div class="day-card">
@@ -113,5 +128,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
