--- a/index.html
+++ b/index.html
@@ -20,31 +20,30 @@
     <main class="content-container">
         
         <section id="flight" class="content-section active">
-            <h2>✈️ 航班資訊</h2>
-            <div class="card">
-                <h3>星宇航空 STARLUX</h3>
-                <div class="flight-detail">
-                    <p><strong>去程：TPE > FUK</strong></p>
-                    <p>09:35 - 13:05 | 桃園機場 1 航廈</p>
-                </div>
-                <hr>
-                <div class="flight-detail">
-                    <p><strong>回程：FUK > TPE</strong></p>
-                    <p>14:15 - 15:45 | 桃園機場 1 航廈</p>
-                </div>
-            </div>
-        </section>
-        <section id="flight check" class="content-section active">
-            <h2>✈️ 航班資訊 待確認細節</h2>
-            <div class="card">
-                <h3>星宇航空 STARLUX</h3>
-                <div class="flight-detail">
-                    <p><strong>報到日為前 48 小時 </p>
-                    <p><strong>要記得選位置 訂餐 </p>
-                    <p><strong>去回叫車都還沒訂欸 </p>
-                </div>
-                </div>
-        </section>
+    <h2>✈️ 航班資訊</h2>
+    
+    <div class="card">
+        <h3>星宇航空 STARLUX</h3>
+        <div class="flight-detail">
+            <p><strong>去程：TPE > FUK</strong></p>
+            <p>09:35 - 13:05 | 桃園機場 1 航廈</p>
+        </div>
+        <hr>
+        <div class="flight-detail">
+            <p><strong>回程：FUK > TPE</strong></p>
+            <p>14:15 - 15:45 | 桃園機場 1 航廈</p>
+        </div>
+    </div>
+
+    <div class="card">
+        <h3>✈️ 航班資訊 待確認細節</h3>
+        <div class="flight-detail">
+            <p><strong>報到日為前 48 小時</strong></p>
+            <p><strong>要記得選位置 訂餐</strong></p>
+            <p><strong>去回叫車都還沒訂欸</strong></p>
+        </div>
+    </div>
+</section>
 
 
         <section id="itinerary" class="content-section">
