--- a/index.html
+++ b/index.html
@@ -48,31 +48,31 @@
 
         <section id="itinerary" class="content-section">
             <h2>🗺️ 五天四夜行程概覽</h2>
-            <div class="timeline">
-                <div class="day-card">
-                    <span class="day-tag">4/28 (二)</span>
-                    <hr>
-                    <p>13:05 抵達 預計出關14:00 </p>
-                    <p>15:00 抵達🏨 Rei hotel Check-in</p>
-                    <p>16:00 回博多車站逛街 / 川端通商店街 節田神社 擇一</p>
-                    <p><small>💡 建議搭計程車 (1500~2000 JPY)，舒服開局！</small></p>
-                    <p><small>💡 博多車站有0101丸井百貨 KITTE></p>
-                    <p><small> Rei hotel Check-in 後<a href="https://maps.app.goo.gl/g6JW3jLX1hehNeYh9">回博多車站逛 Amu 百貨跟地下街</a></small></p>
-                    <p><small> Rei hotel Check-in 後<a href="https://maps.app.goo.gl/oDf73paZkozAPaQX9">去川端通商店街</a></small></p>
-                    <p><small> <a href="https://maps.app.goo.gl/p7KAuhC9ms69wrVR6">博多有 LOPIA 超市</a></small></p>
-                    <p><small> <a href="https://maps.app.goo.gl/jPNQcGJBTirRCNzLA">博多有 思夢樂 大創那些</a></small></p>
-                </div>
+            <div class="day-card">
+    <span class="day-tag">4/28 (二)</span>
+    <hr>
+    <p>13:05 抵達 預計出關14:00 </p>
+    <p>15:00 抵達🏨 Rei hotel Check-in</p>
+    <p>16:00 回博多車站逛街 / 川端通商店街 節田神社 擇一</p>
+    
+    <p><small>💡 建議搭計程車 (1500~2000 JPY)，舒服開局！</small></p>
+    <p><small>💡 博多車站有 0101 丸井百貨 KITTE</small></p>
+    <p><small>Rei hotel Check-in 後 <a href="https://maps.app.goo.gl/g6JW3jLX1hehNeYh9">回博多車站逛 Amu 百貨跟地下街</a></small></p>
+    <p><small>Rei hotel Check-in 後 <a href="https://maps.app.goo.gl/oDf73paZkozAPaQX9">去川端通商店街</a></small></p>
+    <p><small><a href="https://maps.app.goo.gl/p7KAuhC9ms69wrVR6">博多有 LOPIA 超市</a></small></p>
+    <p><small><a href="https://maps.app.goo.gl/jPNQcGJBTirRCNzLA">博多有 思夢樂 大創那些</a></small></p>
+</div>
 
-                <div class="day-card">
-                    <span class="day-tag">4/29 (三)</span>
-                    <hr>                    
-                    <p>09:00 起床 吃早餐</p>
-                    <p>10:00 準備出發去天神地區</p>
-                    <p>10:30 先前往天神地下街 可去Parco</p>
-                    <p>16:00 預計是一整天</p>
-                    <p><small>💡地下鐵空港線『天神站』、地下鐵七隈線『天神南站』抵達天神地下街</small></p>
-                    <p><small> Mina 百貨有GU Uniqlo 麥當勞 後可轉往空橋的Aeon</small></p>
-                </div>
+<div class="day-card">
+    <span class="day-tag">4/29 (三)</span>
+    <hr>                      
+    <p>09:00 起床 吃早餐</p>
+    <p>10:00 準備出發去天神地區</p>
+    <p>10:30 先前往天神地下街 可去Parco</p>
+    <p>16:00 預計是一整天</p>
+    <p><small>💡 地下鐵空港線『天神站』、地下鐵七隈線『天神南站』抵達天神地下街</small></p>
+    <p><small>Mina 百貨有 GU Uniqlo 麥當勞 後可轉往空橋的 Aeon</small></p>
+</div>
                 <div class="day-card">
                     <span class="day-tag">4/30 (四)</span>
                     <p>太宰府 柳川半日遊</p>
