--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <p>10:30 先前往天神地下街 可去Parco</p>
     <p>16:00 預計是一整天</p>
     <p><small>💡 地下鐵空港線『天神站』、地下鐵七隈線『天神南站』抵達天神地下街</small></p>
-    <p><small>Mina 百貨有 GU Uniqlo 麥當勞 後可轉往空橋的 Aeon</small></p>
+    <p><small><a href="https://maps.app.goo.gl/PmTdRLeRR7S3fK6U6">2nd 二手店</a></small></p>
+    <p><small>Mina 百貨有 GU Uniqlo 麥當勞 BOOKOFF 後可轉往空橋的 Aeon</small></p>
 </div>
                 <div class="day-card">
                     <span class="day-tag">4/30 (四)</span>
